<resources>
    <string name="app_name">绿化进度上报</string>
    <string name="current_people">当前人力:</string>
    <string name="max_people">最高人力:</string>
    <string name="project_start">开工</string>
    <string name="project_cancel">竣工</string>
    <string name="cancellation">注销用户</string>
    <string name="leave">请假申请</string>
    <string name="note">笔记本</string>
    <string name="photo">现场图片</string>
    <string name="video">现场视频</string>
    <string name="safe">安全隐患</string>
    <string name="opinion">工地建议</string>
    <string name="message">通讯录</string>
    <string name="chat">聊天</string>
    <string name="friend">好友</string>
    <string name="group">群聊</string>
    <string name="take_photo">照片上传</string>
    <string name="take_video">视频上传</string>
    <string name="take_sign">签到</string>
    <string name="take_process">进度更新</string>
    <string name="take_safe">隐患上报</string>
    <string name="take_device">设备查看</string>
    <string name="technical"><![CDATA[技术&法规]]></string>
    <string name="scene">工地实况</string>
    <string name="menu">主页</string>
    <string name="account">帐号：</string>
    <string name="password">密码：</string>
    <string name="login">登陆</string>
    <string name="baidu_key">zo2WUtLrjGVX54TmE0ZIwTuxCS0vqI6i</string>
    <string name="weather">天气</string>
    <string name="date">时间：</string>
    <string name="weather_1">天气：</string>
    <string name="pm25">PM2.5:</string>
    <string name="wind">风力：</string>
    <string name="temperture">温度：</string>
    <string name="city">城市：</string>
</resources>
