<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#90FFFFFF">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/more_window_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_idea"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_photo" />

        <TextView
            android:id="@+id/more_window_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:layout_toRightOf="@+id/more_window_local"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_photo"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_video" />

        <TextView
            android:id="@+id/more_window_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/more_window_online"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_camera"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_sign" />

        <TextView
            android:id="@+id/more_window_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_window_local"
            android:layout_marginRight="30dip"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_lbs"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_process" />

        <TextView
            android:id="@+id/more_window_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_window_online"
            android:layout_marginRight="30dip"
            android:layout_toRightOf="@+id/more_window_collect"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_review"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_safe" />

        <TextView
            android:id="@+id/more_window_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_window_delete"
            android:layout_toRightOf="@+id/more_window_auto"
            android:clickable="true"
            android:drawableTop="@drawable/tabbar_compose_more"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/more_window_item_margin"
            android:text="@string/take_device" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp">

        <ImageView
            android:id="@+id/center_music_window_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tabbar_compose_background_icon_close" />

    </FrameLayout>

</RelativeLayout>